ปรับ สามารถมอบหมายงานได้หลายคน

--- a/board/templates/boards/board_detail.html
+++ b/board/templates/boards/board_detail.html
@@ -148,7 +148,7 @@
       </header>
 
       {# --- SCROLLABLE LIST AREA --- #}
-      <main class="flex-1 overflow-x-auto overflow-y-hidden board-scroll w-full">
+      <main class="flex-1 overflow-x-auto overflow-y-hidden w-full h-full bg-gray-50/50">
         <div class="h-full flex items-start gap-6 px-6 py-6 min-w-max">
            
            {% for lst in lists %}
